--- a/src/form.less
+++ b/src/form.less
@@ -1,31 +1,5 @@
-html, body {
-    padding: 0;
-    margin: 0;
-    border: 0;
-
-    transition: .5s background-color ease;
-}
-
-body.debug .snowflake {
-    border: 1px solid red;
-}
-
-body,
-input {
-    font-family: Arial, sans-serif;
-    font-size: 12px;
-}
-
-input {
-    margin-left: 0;
-}
-
-label {
-    margin-right: 5px;
-}
-
-.demo {
-    &__form {
+.form {
+    &__panel {
         position: absolute;
         z-index: 20;
         right: 15px;
