--- a/src/index.less
+++ b/src/index.less
@@ -1,8 +1,35 @@
 @import "code.less";
-@import "demo.less";
+@import "form.less";
+
+html, body {
+    padding: 0;
+    margin: 0;
+    border: 0;
+
+    transition: .5s background-color ease;
+}
+
+body.debug .snowflake {
+    border: 1px solid red;
+}
 
 .body_bg_black {
     background: black;
+}
+
+body,
+textarea,
+input {
+    font-family: Arial, sans-serif;
+    font-size: 12px;
+}
+
+input {
+    margin-left: 0;
+}
+
+label {
+    margin-right: 5px;
 }
 
 .github {
