--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,3 @@
-@import "code.less";
-@import "form.less";
-
 html, body {
     padding: 0;
     margin: 0;
@@ -51,8 +48,8 @@ label {
     top: 15px;
     color: #222;
     font-weight: normal;
+}
 
-    .body_bg_black & {
-        color: #ddd;
-    }
+.body_bg_black .header {
+    color: #ddd;
 }
