--- a/src/code.css
+++ b/src/code.css
@@ -3,7 +3,7 @@
     left: 15px;
     right: 15px;
     bottom: 0;
-    height: 150px;
+    height: 180px;
 }
 
 .code__label {
@@ -12,8 +12,8 @@
 }
 
 .code__copy {
-    font-size: 10px;
-    vertical-align: middle;
+    margin-top: 4px;
+    font-size: 16px;
 }
 
 .code__textarea {
