--- a/src/form.css
+++ b/src/form.css
@@ -31,7 +31,12 @@
 }
 
 .form__group input[type="number"] {
-    width: 4em;
+    width: 60px;
+}
+
+.form__color {
+    height: 20px;
+    width: 60px;
 }
 
 .form__group:hover {
